Add jar build compatibility